# mat-agent-web

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  agent_mcp_server.py  agent_server.py  databasemanage.py  flask_server.py  loadenv.py  matagent.db  matagent_history.db  matagent_server_history.db  mcp_server.py  mcp_skill.instructions.md  mpmcp.py  oqmd.py  pyproject.toml  requirements.txt  run_web.py  streamlit_example.py  structure_info.json  structure_view.html  tryssh.py  web_app.py  web_mcp_app.py  项目总结.md  项目概述.md
agent/: langchain_agent.py  langchain_mcp_agent.py
config/: config.toml
myml/: atomic_orbital_calc.py  bandgap_predict.py  element_features.csv  element_features_bandgap.csv  featurizer.py  ion_conductivity.py  nist_atomic_data_lda(eV).csv  xgb_model.json
server/: tryssh.py
